--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <form><div class="todo">
         <h4>MY TO-DO LIST!</h4>
-        <input type="text" class="myinput"> <button type="button" class="btn btn-primary">+</button>
+        <div>
+           <input type="text" placeholder="Add a to-do" class="myinput"> 
+           <button type="button" class="btn btn-primary">+</button> 
+        </div>
+        <div>
+        <ul id="ul"></ul>
     </div>
-    <div>
-        <ul id="ul">
-            
-        </ul>
     </div>
+    </form>
+    
     <script src="task-manager.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
