made some changes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div class="todo">
-        <h1>MY TO-DO LIST!</h1>
-        <input type="text" placeholder="Add a to-do..." class="myinput">
-        <button type="button" class="btn btn-primary">+</button>
-        <ul id="ul"></ul>
+        <div class="elements">
+            <h1>MY TO-DO LIST!</h1>
+                <input type="text" placeholder="Add a to-do..." class="myinput">
+                    <button type="button" class="btn btn-primary">+</button>
+                        <ul id="ul"></ul>
+        </div>
     </div>
 
     <script src="todolist.js"></script>
