made some changes

--- a/index.html
+++ b/index.html
@@ -4,19 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="todo">
-        <div class="elements">
-            <h1>MY TO-DO LIST!</h1>
-                <input type="text" placeholder="Add a to-do..." class="myinput">
-                    <button type="button" class="btn btn-primary">+</button>
-                        <ul id="ul"></ul>
+        <div class="card" style="width: 30rem;">
+            <div class="container col-sm-12 col-md-12">
+                <h2>MY TO-DO LIST!</h2>
+
+                <div class="input-btn">
+                    <input type="text" class="addtoInput" placeholder="Add a task">
+                    <button class="btn btn-primary btn-small">+</button>
+                </div>
+
+                <div class="task-table">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                            <th scope="col">Task</th>
+                            <th scope="col">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            <td>Mark</td>
+                            <td><button class="btn btn-danger btn-small">delete</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <ul id="ul"></ul>
+            </div>
         </div>
     </div>
-
-    <script src="todolist.js"></script>
+</body>
+<script src="todolist.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
     
