made some change

--- a/index.html
+++ b/index.html
@@ -22,19 +22,18 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                            <th scope="col">Task</th>
-                            <th scope="col">Action</th>
+                            <th scope="col">Tasks</th>
+                            <!-- <th scope="col">Action</th> -->
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                             <td>Mark</td>
-                            <td><button class="btn btn-danger btn-small">delete</button></td>
+                            <!-- <td><button class="btn btn-danger btn-small">delete</button></td> -->
                             </tr>
                         </tbody>
                     </table>
                 </div>
-                <ul id="ul"></ul>
             </div>
         </div>
     </div>
